js/src/jit-test/tests/binast/invalid/identifier-binding.binjs
BINJS
[
GRAMMAR
]
identity
;
"
BindingIdentifier0LiteralNumericExpression
VariableDeclarator
(
AssertedDeclaredName2AssertedScriptGlobalScope
Script
&
VariableDeclaration
[
STRINGS
]
identity
;
a
var
1
[
TREE
]
identity
;
J
